--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "nodemon index.js"
   },
   "author": "Svetlana Zinovkina",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "grammy": "^1.25.2",
-    "mongoose": "^8.4.4"
+    "mongoose": "^8.4.4",
+    "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.6.0"
   }
 }
