fix command end sleep

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sleepTracker",
+  "name": "sleeptracker",
   "version": "1.0.0",
   "description": "sleep baby tracker",
   "type": "module",
