--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "Svetlana Zinovkina",
   "license": "ISC",
   "dependencies": {
+    "@fluent/bundle": "^0.18.0",
+    "@grammyjs/i18n": "^1.0.2",
     "dotenv": "^16.4.5",
     "grammy": "^1.25.2",
-    "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4"
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "eslint": "^9.6.0",
-    "globals": "^15.6.0"
+    "globals": "^15.7.0"
   }
 }
