--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "grammy": "^1.25.2",
     "knex": "^3.1.0",
     "nodemon": "^3.1.4",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
-    "eslint": "^9.6.0",
     "globals": "^15.7.0"
   }
 }
