--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.6.0",
-    "globals": "^15.7.0"
+    "@eslint/js": "^9.7.0",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0"
   }
 }
